Update file permissions and modify cath-protocol.ipynb
- Changed file permissions for .gitignore, README.md, cath-protocol.ipynb, and cath_protocol_v1.ipynb to executable (755).
- Updated execution count in cath-protocol.ipynb.
- Removed automatic dependency installation code and added environment configuration print statements.
- Updated BASE_PATH to reflect new directory structure.
- Updated Python version in kernelspec from 3.11.13 to 3.12.11.

--- a/cath-protocol.ipynb
+++ b/cath-protocol.ipynb
@@ -2,71 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Verificando e instalando dependencias...\n",
-      "\n",
-      "[OK] requests - ja instalado\n",
-      "[OK] pandas - ja instalado\n",
-      "[OK] numpy - ja instalado\n",
-      "[OK] matplotlib - ja instalado\n",
-      "[OK] seaborn - ja instalado\n",
-      "[OK] tqdm - ja instalado\n",
-      "[INSTALANDO] biopython...\n",
-      "Requirement already satisfied: biopython in /Users/madsonluna/Library/Python/3.11/lib/python/site-packages (1.86)\n",
-      "Requirement already satisfied: numpy in /Users/madsonluna/Library/Python/3.11/lib/python/site-packages (from biopython) (2.3.4)\n",
-      "[OK] biopython - instalado com sucesso\n",
-      "\n",
       "============================================================\n",
-      "Python: /opt/homebrew/opt/python@3.11/bin/python3.11\n",
-      "============================================================\n",
-      "\n",
       "Ambiente configurado com sucesso!\n",
+      "============================================================\n",
       "\n",
+      "Python: /Volumes/promethion/cath-mainly-alpha/.venv/bin/python\n",
       "Requests: 2.32.5\n",
       "Pandas: 2.3.3\n",
-      "Numpy: 2.3.4\n",
-      "Matplotlib: 3.10.7\n"
+      "Numpy: 2.3.5\n",
+      "Matplotlib: 3.10.7\n",
+      "Seaborn: 0.13.2\n",
+      "\n",
+      "============================================================\n"
      ]
     }
    ],
    "source": [
-    "# Instalacao automatica de dependencias\n",
-    "import sys\n",
-    "import subprocess\n",
-    "\n",
-    "# Lista de pacotes necessarios\n",
-    "required_packages = [\n",
-    "    'requests',\n",
-    "    'pandas',\n",
-    "    'numpy',\n",
-    "    'matplotlib',\n",
-    "    'seaborn',\n",
-    "    'tqdm',\n",
-    "    'biopython'\n",
-    "]\n",
-    "\n",
-    "print(\"Verificando e instalando dependencias...\\n\")\n",
-    "\n",
-    "for package in required_packages:\n",
-    "    try:\n",
-    "        __import__(package)\n",
-    "        print(f\"[OK] {package} - ja instalado\")\n",
-    "    except ImportError:\n",
-    "        print(f\"[INSTALANDO] {package}...\")\n",
-    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--user\", package])\n",
-    "        print(f\"[OK] {package} - instalado com sucesso\")\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"Python: \" + sys.executable)\n",
-    "print(\"=\"*60 + \"\\n\")\n",
-    "\n",
     "# Imports principais\n",
+    "import sys\n",
     "import requests\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -81,16 +41,21 @@
     "sns.set_style(\"whitegrid\")\n",
     "plt.rcParams['figure.figsize'] = (12, 6)\n",
     "\n",
-    "print(\"Ambiente configurado com sucesso!\\n\")\n",
+    "print(\"=\"*60)\n",
+    "print(\"Ambiente configurado com sucesso!\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"\\nPython: {sys.executable}\")\n",
     "print(f\"Requests: {requests.__version__}\")\n",
     "print(f\"Pandas: {pd.__version__}\")\n",
     "print(f\"Numpy: {np.__version__}\")\n",
-    "print(f\"Matplotlib: {plt.matplotlib.__version__}\")"
+    "print(f\"Matplotlib: {plt.matplotlib.__version__}\")\n",
+    "print(f\"Seaborn: {sns.__version__}\")\n",
+    "print(\"\\n\" + \"=\"*60)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +129,7 @@
     "\"\"\"\n",
     "\n",
     "# Configuracoes para ambiente local\n",
-    "BASE_PATH = \"/Users/madsonluna/Documents/cath\"\n",
+    "BASE_PATH = \"/Volumes/promethion/cath-mainly-alpha\"\n",
     "CATH_DOMAIN_LIST_URL = \"http://download.cathdb.info/cath/releases/latest-release/cath-classification-data/cath-domain-list.txt\"\n",
     "PDB_DOWNLOAD_URL = \"https://files.rcsb.org/download/{}.pdb\"\n",
     "MAINLY_ALPHA_CLASS = \"1\"  # Class 1 no CATH = Mainly Alpha\n",
@@ -435,12 +400,12 @@
     "except Exception as e:\n",
     "    print(f\"\\nErro critico na execucao: {e}\")\n",
     "    import traceback\n",
-    "    traceback.print_exc()"
+    "    traceback.print_exc()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -501,7 +466,7 @@
     "from Bio.PDB import PDBIO, Select\n",
     "\n",
     "# Configurações para ambiente local\n",
-    "BASE_PATH = \"/Users/madsonluna/Documents/cath\"\n",
+    "BASE_PATH = \"/Volumes/promethion/cath-mainly-alpha\"\n",
     "MAX_WORKERS = max(1, multiprocessing.cpu_count() - 1)  # Usa CPU-1 para deixar sistema responsivo\n",
     "\n",
     "# Aminoácidos padrão\n",
@@ -778,7 +743,7 @@
     "    # 1. Setup de diretórios\n",
     "    paths = setup_directories()\n",
     "    if paths[0] is None:\n",
-    "        print(\"\\n⚠️  Execute primeiro a célula de download!\")\n",
+    "        print(\"\\nExecute primeiro a célula de download!\")\n",
     "    else:\n",
     "        base_path, raw_dir, clean_dir, logs_path = paths\n",
     "\n",
@@ -823,7 +788,7 @@
     "from Bio import PDB\n",
     "\n",
     "# Configurações\n",
-    "BASE_PATH = \"/Users/madsonluna/Documents/cath\"\n",
+    "BASE_PATH = \"/Volumes/promethion/cath-mainly-alpha\"\n",
     "\n",
     "# Aminoácidos padrão\n",
     "STANDARD_AMINO_ACIDS = {\n",
@@ -1024,7 +989,7 @@
     "from concurrent.futures import ProcessPoolExecutor, as_completed\n",
     "\n",
     "# Configurações para ambiente local\n",
-    "BASE_PATH = \"/Users/madsonluna/Documents/cath\"\n",
+    "BASE_PATH = \"/Volumes/promethion/cath-mainly-alpha\"\n",
     "CLEAN_STRUCTURES_PATH = f\"{BASE_PATH}/structures_clean\"\n",
     "MAX_WORKERS = max(1, multiprocessing.cpu_count() - 1)\n",
     "\n",
@@ -1590,7 +1555,7 @@
     "import multiprocessing\n",
     "\n",
     "# Configurações para ambiente local\n",
-    "BASE_PATH = \"/Users/madsonluna/Documents/cath\"\n",
+    "BASE_PATH = \"/Volumes/promethion/cath-mainly-alpha\"\n",
     "CLEAN_STRUCTURES_PATH = f\"{BASE_PATH}/structures_clean\"\n",
     "MAX_WORKERS = max(1, multiprocessing.cpu_count() - 1)\n",
     "\n",
@@ -2175,7 +2140,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -2188,7 +2154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.11"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
