Update CATH protocol paths and handle download errors
- Changed directory paths from local user directories to a shared volume for consistency.
- Updated output messages to reflect new paths for saving CATH domain list and structures.
- Adjusted error handling messages to indicate issues with saving files due to space limitations.
- Added a warning related to the IProgress not found in the tqdm package.

--- a/cath-protocol.ipynb
+++ b/cath-protocol.ipynb
@@ -68,56 +68,38 @@
       "============================================================\n",
       "\n",
       "Verificando estrutura de diretorios:\n",
-      "  Base: /Users/madsonluna/Documents/cath - OK\n",
-      "  Structures: /Users/madsonluna/Documents/cath/structures - OK\n",
-      "  Logs: /Users/madsonluna/Documents/cath/logs - OK\n",
+      "  Base: /Volumes/promethion/cath-mainly-alpha - OK\n",
+      "  Structures: /Volumes/promethion/cath-mainly-alpha/structures - OK\n",
+      "  Logs: /Volumes/promethion/cath-mainly-alpha/logs - OK\n",
       "\n",
-      "Diretorio base: /Users/madsonluna/Documents/cath\n",
+      "Diretorio base: /Volumes/promethion/cath-mainly-alpha\n",
       "\n",
       "Baixando lista de dominios CATH...\n",
-      "Arquivo CATH salvo: /Users/madsonluna/Documents/cath/cath-domain-list.txt\n",
+      "Arquivo CATH salvo: /Volumes/promethion/cath-mainly-alpha/cath-domain-list.txt\n",
+      "Processando arquivo CATH...\n",
+      "Arquivo CATH salvo: /Volumes/promethion/cath-mainly-alpha/cath-domain-list.txt\n",
       "Processando arquivo CATH...\n",
       "Total de estruturas PDB mainly-alpha: 50996\n",
       "\n",
       "Iniciando download de 50996 estruturas...\n",
       "Workers paralelos: 16\n",
-      "Salvando em: /Users/madsonluna/Documents/cath/structures\n",
+      "Salvando em: /Volumes/promethion/cath-mainly-alpha/structures\n",
+      "\n",
+      "Total de estruturas PDB mainly-alpha: 50996\n",
+      "\n",
+      "Iniciando download de 50996 estruturas...\n",
+      "Workers paralelos: 16\n",
+      "Salvando em: /Volumes/promethion/cath-mainly-alpha/structures\n",
       "\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5cdbb2e33f84bb78286c368ab59ce15",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading PDB structures:   0%|          | 0/50996 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Erro ao salvar lista de codigos: [Errno 28] No space left on device: '/Users/madsonluna/Documents/cath/mainly_alpha_pdb_codes.txt'\n",
-      "Erro ao salvar lista de falhas: [Errno 28] No space left on device: '/Users/madsonluna/Documents/cath/logs/failed_downloads.txt'\n",
-      "Erro ao salvar relatorio: [Errno 28] No space left on device: '/Users/madsonluna/Documents/cath/logs/download_report.txt'\n",
-      "\n",
-      "============================================================\n",
-      "RELATORIO FINAL DE DOWNLOAD\n",
-      "============================================================\n",
-      "Total de estruturas: 50996\n",
-      "Downloads bem-sucedidos: 24767\n",
-      "Ja existentes (nao baixados): 0\n",
-      "Falhas: 26229\n",
-      "Taxa de sucesso: 48.6%\n",
-      "\n",
-      "Estruturas salvas em: /Users/madsonluna/Documents/cath/structures\n",
-      "============================================================\n"
+      "/Volumes/promethion/cath-mainly-alpha/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading PDB structures:  22%|██▏       | 11317/50996 [10:03<33:20, 19.84it/s, Success=11316, Exists=0, Error=1]  "
      ]
     }
    ],
