Refactor code structure for improved readability and maintainability

--- a/cath-protocol.ipynb
+++ b/cath-protocol.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,29 @@
      "text": [
       "/Volumes/promethion/cath-mainly-alpha/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Downloading PDB structures:  22%|██▏       | 11317/50996 [10:03<33:20, 19.84it/s, Success=11316, Exists=0, Error=1]  "
+      "Downloading PDB structures: 100%|██████████| 50996/50996 [47:03<00:00, 18.06it/s, Success=50989, Exists=0, Error=7]  \n",
+      "Downloading PDB structures: 100%|██████████| 50996/50996 [47:03<00:00, 18.06it/s, Success=50989, Exists=0, Error=7]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista de codigos PDB salva em: /Volumes/promethion/cath-mainly-alpha/mainly_alpha_pdb_codes.txt\n",
+      "Codigos com falha salvos em: /Volumes/promethion/cath-mainly-alpha/logs/failed_downloads.txt\n",
+      "Relatorio salvo em: /Volumes/promethion/cath-mainly-alpha/logs/download_report.txt\n",
+      "\n",
+      "============================================================\n",
+      "RELATORIO FINAL DE DOWNLOAD\n",
+      "============================================================\n",
+      "Total de estruturas: 50996\n",
+      "Downloads bem-sucedidos: 50989\n",
+      "Ja existentes (nao baixados): 0\n",
+      "Falhas: 7\n",
+      "Taxa de sucesso: 100.0%\n",
+      "\n",
+      "Estruturas salvas em: /Volumes/promethion/cath-mainly-alpha/structures\n",
+      "============================================================\n"
      ]
     }
    ],
@@ -420,10 +442,9 @@
       "Ambiente Local - Processamento Paralelo\n",
       "============================================================\n",
       "\n",
-      "ERRO: Pasta de estruturas não encontrada em /Users/madsonluna/Documents/cath/structures\n",
-      "Execute primeiro o script de download!\n",
-      "\n",
-      "⚠️  Execute primeiro a célula de download!\n"
+      "Diretório base: /Volumes/promethion/cath-mainly-alpha\n",
+      "Estruturas raw: /Volumes/promethion/cath-mainly-alpha/structures\n",
+      "Estruturas clean: /Volumes/promethion/cath-mainly-alpha/structures_clean\n"
      ]
     }
    ],
@@ -431,8 +452,8 @@
     "#!/usr/bin/env python3\n",
     "\"\"\"\n",
     "Script para limpeza de estruturas PDB em ambiente local\n",
-    "Remove heteroátomos, água, íons e mantém apenas cadeia A\n",
-    "Versão com processamento paralelo otimizado\n",
+    "Remove heteroátomos, água, íons e mantém a melhor cadeia disponível\n",
+    "Versão com processamento paralelo otimizado e logs detalhados\n",
     "\"\"\"\n",
     "\n",
     "from pathlib import Path\n",
@@ -459,15 +480,18 @@
     "    'SER', 'THR', 'TRP', 'TYR', 'VAL'\n",
     "}\n",
     "\n",
-    "class ChainAOnlySelect(Select):\n",
+    "class ChainSelect(Select):\n",
     "    \"\"\"\n",
-    "    Seleciona apenas cadeia A e remove heteroátomos\n",
+    "    Seleciona uma cadeia específica e remove heteroátomos\n",
     "    \"\"\"\n",
+    "    def __init__(self, chain_id):\n",
+    "        self.chain_id = chain_id\n",
+    "    \n",
     "    def accept_model(self, model):\n",
     "        return model.id == 0\n",
     "\n",
     "    def accept_chain(self, chain):\n",
-    "        return chain.id == 'A'\n",
+    "        return chain.id == self.chain_id\n",
     "\n",
     "    def accept_residue(self, residue):\n",
     "        hetfield = residue.id[0]\n",
@@ -500,6 +524,36 @@
     "\n",
     "    return base_path, structures_raw, clean_path, logs_path\n",
     "\n",
+    "def get_best_chain(structure):\n",
+    "    \"\"\"\n",
+    "    Retorna a melhor cadeia disponível (prioridade: A > B > outras)\n",
+    "    Retorna (chain_id, residue_count) ou (None, 0) se nenhuma cadeia válida\n",
+    "    \"\"\"\n",
+    "    chain_info = []\n",
+    "    \n",
+    "    for model in structure:\n",
+    "        for chain in model:\n",
+    "            # Conta apenas resíduos de aminoácidos padrão\n",
+    "            residue_count = sum(\n",
+    "                1 for residue in chain \n",
+    "                if residue.id[0] == ' ' and residue.resname.strip() in STANDARD_AMINO_ACIDS\n",
+    "            )\n",
+    "            if residue_count > 0:\n",
+    "                chain_info.append((chain.id, residue_count))\n",
+    "    \n",
+    "    if not chain_info:\n",
+    "        return None, 0\n",
+    "    \n",
+    "    # Prioriza chain A, depois B, depois a maior\n",
+    "    for chain_id in ['A', 'B']:\n",
+    "        for cid, count in chain_info:\n",
+    "            if cid == chain_id:\n",
+    "                return cid, count\n",
+    "    \n",
+    "    # Se não tem A ou B, pega a cadeia com mais resíduos\n",
+    "    chain_info.sort(key=lambda x: x[1], reverse=True)\n",
+    "    return chain_info[0]\n",
+    "\n",
     "def clean_single_structure(input_file: Path, output_file: Path) -> Dict:\n",
     "    \"\"\"\n",
     "    Limpa uma estrutura PDB individual\n",
@@ -511,6 +565,7 @@
     "        return {\n",
     "            'pdb_code': pdb_code,\n",
     "            'status': 'exists',\n",
+    "            'chain': None,\n",
     "            'residues': 0\n",
     "        }\n",
     "\n",
@@ -518,48 +573,49 @@
     "        parser = PDB.PDBParser(QUIET=True)\n",
     "        structure = parser.get_structure(pdb_code, str(input_file))\n",
     "\n",
-    "        # Verifica cadeia A\n",
-    "        has_chain_a = any('A' in [c.id for c in m] for m in structure)\n",
+    "        # Encontra a melhor cadeia\n",
+    "        best_chain_id, residue_count = get_best_chain(structure)\n",
     "\n",
-    "        if not has_chain_a:\n",
+    "        if best_chain_id is None:\n",
     "            return {\n",
     "                'pdb_code': pdb_code,\n",
-    "                'status': 'no_chain_a',\n",
-    "                'residues': 0\n",
+    "                'status': 'no_valid_chain',\n",
+    "                'chain': None,\n",
+    "                'residues': 0,\n",
+    "                'message': 'Nenhuma cadeia com aminoácidos padrão encontrada'\n",
     "            }\n",
     "\n",
-    "        # Salva apenas cadeia A limpa\n",
+    "        # Salva cadeia limpa\n",
     "        io = PDBIO()\n",
     "        io.set_structure(structure)\n",
-    "        io.save(str(output_file), ChainAOnlySelect())\n",
+    "        io.save(str(output_file), ChainSelect(best_chain_id))\n",
     "\n",
-    "        # Conta resíduos\n",
-    "        clean_structure = parser.get_structure(pdb_code, str(output_file))\n",
-    "        residue_count = sum(\n",
-    "            len([r for r in c if r.id[0] == ' '])\n",
-    "            for m in clean_structure for c in m\n",
-    "        )\n",
-    "\n",
-    "        if residue_count == 0:\n",
-    "            output_file.unlink()\n",
+    "        # Verifica se salvou corretamente\n",
+    "        if not output_file.exists() or output_file.stat().st_size == 0:\n",
+    "            output_file.unlink(missing_ok=True)\n",
     "            return {\n",
     "                'pdb_code': pdb_code,\n",
-    "                'status': 'empty',\n",
-    "                'residues': 0\n",
+    "                'status': 'empty_output',\n",
+    "                'chain': best_chain_id,\n",
+    "                'residues': 0,\n",
+    "                'message': 'Arquivo de saída vazio'\n",
     "            }\n",
     "\n",
     "        return {\n",
     "            'pdb_code': pdb_code,\n",
     "            'status': 'success',\n",
+    "            'chain': best_chain_id,\n",
     "            'residues': residue_count\n",
     "        }\n",
     "\n",
     "    except Exception as e:\n",
+    "        error_type = type(e).__name__\n",
     "        return {\n",
     "            'pdb_code': pdb_code,\n",
     "            'status': 'error',\n",
+    "            'chain': None,\n",
     "            'residues': 0,\n",
-    "            'message': str(e)\n",
+    "            'message': f'{error_type}: {str(e)[:100]}'\n",
     "        }\n",
     "\n",
     "def clean_all_structures(raw_dir: Path, clean_dir: Path) -> Dict:\n",
@@ -589,12 +645,13 @@
     "            'total': total,\n",
     "            'success': existing_clean,\n",
     "            'exists': existing_clean,\n",
-    "            'no_chain_a': 0,\n",
-    "            'empty': 0,\n",
+    "            'no_valid_chain': 0,\n",
+    "            'empty_output': 0,\n",
     "            'error': 0,\n",
     "            'total_residues': 0,\n",
-    "            'no_chain_a_codes': [],\n",
-    "            'error_codes': []\n",
+    "            'chain_usage': {},\n",
+    "            'error_details': {},\n",
+    "            'failed_codes': []\n",
     "        }\n",
     "\n",
     "    print(f\"\\nIniciando limpeza paralela...\\n\")\n",
@@ -603,12 +660,13 @@
     "        'total': total,\n",
     "        'success': 0,\n",
     "        'exists': 0,\n",
-    "        'no_chain_a': 0,\n",
-    "        'empty': 0,\n",
+    "        'no_valid_chain': 0,\n",
+    "        'empty_output': 0,\n",
     "        'error': 0,\n",
     "        'total_residues': 0,\n",
-    "        'no_chain_a_codes': [],\n",
-    "        'error_codes': []\n",
+    "        'chain_usage': {},\n",
+    "        'error_details': {},\n",
+    "        'failed_codes': []\n",
     "    }\n",
     "\n",
     "    # Processamento paralelo com ThreadPoolExecutor (I/O bound)\n",
@@ -625,22 +683,29 @@
     "                if result['status'] == 'success':\n",
     "                    results['success'] += 1\n",
     "                    results['total_residues'] += result['residues']\n",
+    "                    chain = result['chain']\n",
+    "                    results['chain_usage'][chain] = results['chain_usage'].get(chain, 0) + 1\n",
     "                elif result['status'] == 'exists':\n",
     "                    results['exists'] += 1\n",
-    "                elif result['status'] == 'no_chain_a':\n",
-    "                    results['no_chain_a'] += 1\n",
-    "                    results['no_chain_a_codes'].append(result['pdb_code'])\n",
-    "                elif result['status'] == 'empty':\n",
-    "                    results['empty'] += 1\n",
+    "                elif result['status'] == 'no_valid_chain':\n",
+    "                    results['no_valid_chain'] += 1\n",
+    "                    results['failed_codes'].append(result['pdb_code'])\n",
+    "                elif result['status'] == 'empty_output':\n",
+    "                    results['empty_output'] += 1\n",
+    "                    results['failed_codes'].append(result['pdb_code'])\n",
     "                elif result['status'] == 'error':\n",
     "                    results['error'] += 1\n",
-    "                    results['error_codes'].append(result['pdb_code'])\n",
+    "                    results['failed_codes'].append(result['pdb_code'])\n",
+    "                    # Agrupa erros por tipo\n",
+    "                    error_msg = result.get('message', 'Unknown error')\n",
+    "                    error_type = error_msg.split(':')[0] if ':' in error_msg else 'Unknown'\n",
+    "                    results['error_details'][error_type] = results['error_details'].get(error_type, 0) + 1\n",
     "\n",
     "                pbar.update(1)\n",
     "                pbar.set_postfix({\n",
     "                    'OK': results['success'],\n",
     "                    'Exist': results['exists'],\n",
-    "                    'NoChainA': results['no_chain_a'],\n",
+    "                    'NoChain': results['no_valid_chain'],\n",
     "                    'Error': results['error']\n",
     "                })\n",
     "\n",
@@ -648,23 +713,27 @@
     "\n",
     "def save_cleaning_results(logs_path: Path, clean_results: Dict):\n",
     "    \"\"\"\n",
-    "    Salva resultados da limpeza\n",
+    "    Salva resultados da limpeza com detalhamento de erros\n",
     "    \"\"\"\n",
-    "    # Log de estruturas sem cadeia A\n",
-    "    if clean_results['no_chain_a_codes']:\n",
-    "        no_chain_file = logs_path / \"no_chain_a.txt\"\n",
-    "        with open(no_chain_file, 'w') as f:\n",
-    "            for code in sorted(clean_results['no_chain_a_codes']):\n",
+    "    # Log de estruturas sem cadeia válida\n",
+    "    if clean_results['failed_codes']:\n",
+    "        failed_file = logs_path / \"failed_structures.txt\"\n",
+    "        with open(failed_file, 'w') as f:\n",
+    "            f.write(\"Estruturas que falharam na limpeza:\\n\")\n",
+    "            f.write(\"=\"*60 + \"\\n\\n\")\n",
+    "            for code in sorted(clean_results['failed_codes']):\n",
     "                f.write(f\"{code}\\n\")\n",
-    "        print(f\"\\nEstruturas sem cadeia A: {no_chain_file}\")\n",
+    "        print(f\"\\nEstruturas com falha: {failed_file}\")\n",
     "\n",
-    "    # Log de erros\n",
-    "    if clean_results['error_codes']:\n",
-    "        error_file = logs_path / \"cleaning_errors.txt\"\n",
+    "    # Log detalhado de tipos de erro\n",
+    "    if clean_results['error_details']:\n",
+    "        error_file = logs_path / \"cleaning_error_details.txt\"\n",
     "        with open(error_file, 'w') as f:\n",
-    "            for code in sorted(clean_results['error_codes']):\n",
-    "                f.write(f\"{code}\\n\")\n",
-    "        print(f\"Erros de processamento: {error_file}\")\n",
+    "            f.write(\"Detalhamento de erros na limpeza:\\n\")\n",
+    "            f.write(\"=\"*60 + \"\\n\\n\")\n",
+    "            for error_type, count in sorted(clean_results['error_details'].items(), key=lambda x: x[1], reverse=True):\n",
+    "                f.write(f\"{error_type}: {count} ocorrências\\n\")\n",
+    "        print(f\"Detalhes dos erros: {error_file}\")\n",
     "\n",
     "    # Relatório de limpeza\n",
     "    report_file = logs_path / \"cleaning_report.txt\"\n",
@@ -675,14 +744,24 @@
     "        f.write(f\"Total de estruturas: {clean_results['total']:,}\\n\")\n",
     "        f.write(f\"Limpas com sucesso: {clean_results['success']:,}\\n\")\n",
     "        f.write(f\"Já existiam: {clean_results['exists']:,}\\n\")\n",
-    "        f.write(f\"Sem cadeia A: {clean_results['no_chain_a']:,}\\n\")\n",
-    "        f.write(f\"Vazias após limpeza: {clean_results['empty']:,}\\n\")\n",
-    "        f.write(f\"Erros: {clean_results['error']:,}\\n\")\n",
+    "        f.write(f\"Sem cadeia válida: {clean_results['no_valid_chain']:,}\\n\")\n",
+    "        f.write(f\"Saída vazia: {clean_results['empty_output']:,}\\n\")\n",
+    "        f.write(f\"Erros de processamento: {clean_results['error']:,}\\n\")\n",
     "        f.write(f\"Total de resíduos: {clean_results['total_residues']:,}\\n\")\n",
     "\n",
     "        if clean_results['success'] > 0:\n",
     "            avg = clean_results['total_residues'] / clean_results['success']\n",
     "            f.write(f\"Média de resíduos/estrutura: {avg:.1f}\\n\")\n",
+    "        \n",
+    "        f.write(\"\\nUso de cadeias:\\n\")\n",
+    "        for chain, count in sorted(clean_results['chain_usage'].items()):\n",
+    "            pct = (count / clean_results['success'] * 100) if clean_results['success'] > 0 else 0\n",
+    "            f.write(f\"  Cadeia {chain}: {count:,} ({pct:.1f}%)\\n\")\n",
+    "        \n",
+    "        if clean_results['error_details']:\n",
+    "            f.write(\"\\nTipos de erros:\\n\")\n",
+    "            for error_type, count in sorted(clean_results['error_details'].items(), key=lambda x: x[1], reverse=True):\n",
+    "                f.write(f\"  {error_type}: {count}\\n\")\n",
     "\n",
     "        f.write(\"\\n\" + \"=\"*60 + \"\\n\")\n",
     "\n",
@@ -690,7 +769,7 @@
     "\n",
     "def print_cleaning_summary(clean_results: Dict, raw_dir: Path, clean_dir: Path):\n",
     "    \"\"\"\n",
-    "    Exibe resumo da limpeza\n",
+    "    Exibe resumo da limpeza com estatísticas detalhadas\n",
     "    \"\"\"\n",
     "    print(f\"\\n{'='*60}\")\n",
     "    print(\"RESUMO DA LIMPEZA\")\n",
@@ -703,15 +782,34 @@
     "    print(f\"  Total processadas:     {clean_results['total']:,}\")\n",
     "    print(f\"  Sucesso:               {clean_results['success']:,}\")\n",
     "    print(f\"  Já existiam:           {clean_results['exists']:,}\")\n",
-    "    print(f\"  Sem cadeia A:          {clean_results['no_chain_a']:,}\")\n",
-    "    print(f\"  Vazias:                {clean_results['empty']:,}\")\n",
+    "    print(f\"  Sem cadeia válida:     {clean_results['no_valid_chain']:,}\")\n",
+    "    print(f\"  Saída vazia:           {clean_results['empty_output']:,}\")\n",
     "    print(f\"  Erros:                 {clean_results['error']:,}\")\n",
     "\n",
     "    total_ok = clean_results['success'] + clean_results['exists']\n",
-    "    print(f\"\\nEstruturas limpas disponíveis: {total_ok:,}\")\n",
+    "    total_fail = clean_results['no_valid_chain'] + clean_results['empty_output'] + clean_results['error']\n",
+    "    success_rate = (total_ok / clean_results['total'] * 100) if clean_results['total'] > 0 else 0\n",
+    "    \n",
+    "    print(f\"\\nEstatísticas:\")\n",
+    "    print(f\"  Estruturas limpas disponíveis: {total_ok:,}\")\n",
+    "    print(f\"  Estruturas com problemas: {total_fail:,}\")\n",
+    "    print(f\"  Taxa de sucesso: {success_rate:.1f}%\")\n",
     "\n",
     "    if clean_results['total_residues'] > 0:\n",
-    "        print(f\"Total de resíduos: {clean_results['total_residues']:,}\")\n",
+    "        print(f\"  Total de resíduos: {clean_results['total_residues']:,}\")\n",
+    "        avg = clean_results['total_residues'] / clean_results['success']\n",
+    "        print(f\"  Média de resíduos/estrutura: {avg:.1f}\")\n",
+    "\n",
+    "    if clean_results['chain_usage']:\n",
+    "        print(f\"\\nUso de cadeias:\")\n",
+    "        for chain, count in sorted(clean_results['chain_usage'].items()):\n",
+    "            pct = (count / clean_results['success'] * 100) if clean_results['success'] > 0 else 0\n",
+    "            print(f\"  Cadeia {chain}: {count:,} estruturas ({pct:.1f}%)\")\n",
+    "    \n",
+    "    if clean_results['error_details']:\n",
+    "        print(f\"\\nPrincipais tipos de erro:\")\n",
+    "        for error_type, count in sorted(clean_results['error_details'].items(), key=lambda x: x[1], reverse=True)[:5]:\n",
+    "            print(f\"  {error_type}: {count}\")\n",
     "\n",
     "    print(f\"{'='*60}\\n\")\n",
     "\n",
