Enhance PDB structure cleaning process with improved logging and memory management
- Added detailed logging for the PDB structure cleaning process, including counts of found files.
- Changed the method of gathering PDB files to use an iterator, reducing memory usage.
- Removed redundant calculations and print statements for existing clean files.
- Improved user feedback during the file searching phase.

--- a/cath-protocol.ipynb
+++ b/cath-protocol.ipynb
@@ -444,7 +444,13 @@
       "\n",
       "Diretório base: /Volumes/promethion/cath-mainly-alpha\n",
       "Estruturas raw: /Volumes/promethion/cath-mainly-alpha/structures\n",
-      "Estruturas clean: /Volumes/promethion/cath-mainly-alpha/structures_clean\n"
+      "Estruturas clean: /Volumes/promethion/cath-mainly-alpha/structures_clean\n",
+      "\n",
+      "============================================================\n",
+      "LIMPEZA DE ESTRUTURAS PDB - PROCESSAMENTO PARALELO\n",
+      "============================================================\n",
+      "\n",
+      "Contando arquivos...\n"
      ]
     }
    ],
@@ -622,38 +628,27 @@
     "    \"\"\"\n",
     "    Processa todas as estruturas em paralelo usando múltiplos processos\n",
     "    \"\"\"\n",
-    "    pdb_files = list(raw_dir.glob(\"*.pdb\"))\n",
+    "    print(f\"\\n{'='*60}\")\n",
+    "    print(f\"LIMPEZA DE ESTRUTURAS PDB - PROCESSAMENTO PARALELO\")\n",
+    "    print(f\"{'='*60}\")\n",
+    "    print(f\"\\nBuscando arquivos PDB...\")\n",
+    "    \n",
+    "    # Usa iterador em vez de list() para não carregar tudo na memória\n",
+    "    pdb_files = []\n",
+    "    count = 0\n",
+    "    for pdb_file in raw_dir.glob(\"*.pdb\"):\n",
+    "        pdb_files.append(pdb_file)\n",
+    "        count += 1\n",
+    "        if count % 10000 == 0:\n",
+    "            print(f\"  Encontrados: {count:,}...\", end='\\r')\n",
     "\n",
     "    if not pdb_files:\n",
     "        print(f\"\\nERRO: Nenhum arquivo .pdb encontrado em {raw_dir}\")\n",
     "        return None\n",
     "\n",
     "    total = len(pdb_files)\n",
-    "    existing_clean = len(list(clean_dir.glob(\"*.pdb\")))\n",
-    "\n",
-    "    print(f\"\\n{'='*60}\")\n",
-    "    print(f\"LIMPEZA DE ESTRUTURAS PDB - PROCESSAMENTO PARALELO\")\n",
-    "    print(f\"{'='*60}\")\n",
-    "    print(f\"\\nTotal de estruturas brutas: {total:,}\")\n",
-    "    print(f\"Já processadas: {existing_clean:,}\")\n",
-    "    print(f\"Restantes: {total - existing_clean:,}\")\n",
+    "    print(f\"\\nTotal de estruturas PDB: {total:,}        \")\n",
     "    print(f\"Workers (CPUs): {MAX_WORKERS}\")\n",
-    "\n",
-    "    if existing_clean == total:\n",
-    "        print(\"\\n✓ Todas as estruturas já foram limpas!\")\n",
-    "        return {\n",
-    "            'total': total,\n",
-    "            'success': existing_clean,\n",
-    "            'exists': existing_clean,\n",
-    "            'no_valid_chain': 0,\n",
-    "            'empty_output': 0,\n",
-    "            'error': 0,\n",
-    "            'total_residues': 0,\n",
-    "            'chain_usage': {},\n",
-    "            'error_details': {},\n",
-    "            'failed_codes': []\n",
-    "        }\n",
-    "\n",
     "    print(f\"\\nIniciando limpeza paralela...\\n\")\n",
     "\n",
     "    results = {\n",
